fix #48 #63 total: 1.5hr

--- a/assets/sass/component/_product.sass
+++ b/assets/sass/component/_product.sass
@@ -573,7 +573,7 @@
   background: url(../images/product-label/label-green.svg) no-repeat center
   position: absolute
   right: 20px
-  top: 0px
+  top: -1px
   z-index: 50
 
 .label-red
@@ -583,7 +583,7 @@
   background: url(../images/product-label/label-red.svg) no-repeat center
   position: absolute
   right: 20px
-  top: 0px
+  top: -1px
   z-index: 50
 
 .label-blue
@@ -593,7 +593,7 @@
   background: url(../images/product-label/label-blue.svg) no-repeat center
   position: absolute
   right: 20px
-  top: 0px
+  top: -1px
   z-index: 50
 
 .label-pink
@@ -603,7 +603,7 @@
   background: url(../images/product-label/label-pink.svg) no-repeat center
   position: absolute
   right: 20px
-  top: 0px
+  top: -1px
   z-index: 50
 
 .label-yellow
@@ -623,7 +623,7 @@
   background: url(../images/product-label/ribbon-green.svg) no-repeat center
   position: absolute
   right: 0
-  top: 0px
+  top: 0
   z-index: 50
 
 .ribbon-orange
