--- a/assets/sass/component/_product.sass
+++ b/assets/sass/component/_product.sass
@@ -8,8 +8,10 @@
   position: relative
   z-index: 6
   transition: 0.3s ease
-  margin-bottom: 10px
   // max-height: 620px
+  max-width: 280px
+  margin: 0 auto 10px
+  
   del
     color: #0b1d37
 
@@ -76,6 +78,7 @@
     width: 100%
     display: flex
     justify-content: center
+    overflow: hidden
     
 
     img
@@ -392,7 +395,7 @@
 @include mobile
   .product
     text-align: center
-    padding: 15px 15px 20px
+    // padding: 0 15px 20px
     // margin-bottom: 0
     // height: 100%
     border: none
