--- a/assets/sass/component/_mobile-menu.sass
+++ b/assets/sass/component/_mobile-menu.sass
@@ -134,8 +134,14 @@
 
 .mobile-menu--msg
 	@include font-regular(16px, $white, 1)
-	padding: 18px 40px
+	padding: 18px 20px
 	border: solid 1px rgba(151, 151, 151, 0.18)
+
+	+mobile
+		font-size: 14.5px
+
+	+tablet
+		font-size: 15px
 
 
 .mobile-menu--tools
