--- a/assets/sass/component/_order-card.sass
+++ b/assets/sass/component/_order-card.sass
@@ -4,6 +4,11 @@
   .order-detail
     display: none
 
+    +mobile
+      .order-detail--main
+        padding-left: 0 !important
+        padding-top: 20px !important
+
   .order-header
     height: 30px
 
@@ -23,12 +28,19 @@
 
   .card-border-header
     +padding-h(45px)
+    +mobile
+      padding: 0 20px
 
   .content
     padding: 15px 30px
+    +mobile
+      padding: 15px 20px
+
+    &.no-space
+      padding: 0
 
     img
-      margin-right: 10px
+      margin-right: 20px
 
     +max-width(780px)
       img
