--- a/assets/sass/component/_button.sass
+++ b/assets/sass/component/_button.sass
@@ -208,3 +208,23 @@ select.custom-select
   border-radius: 0
   appearance: none
   color: $primary-color
+
+
+
+i.checkbox-icon
+  display: inline-block
+  position: relative
+  width: 13px
+  height: 13px
+  border: 1px solid #d8d8d8
+  transition: all  1s ease 
+
+  &:before
+    content: ""
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: #000
+    // background-image: url("../images/webs/icon_check.svg")
