--- a/assets/sass/layout/_shop-cart.sass
+++ b/assets/sass/layout/_shop-cart.sass
@@ -187,3 +187,104 @@
 	color: $primary-color
 	font-size: 14px
 	line-height: 1
+
+
+.shop-boxes
+	display: flex
+	align-items: stretch
+	justify-content: center
+
+
+
+.shop-box
+	flex: 100%
+	padding: 40px
+	border: 1px solid #d8d8d8
+
+
+	
+
+	&+.shop-box
+		border-left: none
+
+	button.no-round-btn
+		display: block
+		min-width: 200px
+		margin: 0 auto
+
+	a
+		color: #b2b2b2
+
+	input[type="text"],input[type="password"]
+		width: 100%
+		height: 50px
+		border: 1px solid #d8d8d8
+		padding: 10px 20px
+		box-sizing: border-box
+		font-size: 16px
+
+		&:focus
+			outline: none
+
+	h3.shop-box--title
+		color: $primary-color
+		font-family: NotoSansTC-Medium
+		font-size: 24px !important
+		font-weight: normal
+		display: block
+		margin: 0
+		margin-bottom: 40px
+		letter-spacing: 4px
+		text-align: center
+
+	.shop-box--form-row
+		margin-bottom: 40px
+		label.title
+			display: block
+			color: $primary-color
+			font-size: 16px
+			font-weight: normal
+			line-height: 18px
+			margin-bottom: 20px
+
+	.forgot-password
+		display: inline-block
+		color: #b2b2b2
+		font-size: 16px
+		line-height: 18px
+
+
+	.shop-box--btn
+		text-align: center
+
+
+	.label-checbox
+		color: $primary-color
+		font-size: 16px
+		line-height: 18px
+		display: block
+
+		input[type="checkbox"]
+			display: none
+
+		
+			&:checked+i.checkbox-icon
+				opacity: 1
+				transform: scale(1)
+					
+
+		span
+			display: inline-block
+			vertical-align: middle
+			margin-left: 17px
+
+
+
+
+.shop-box--msg
+	margin-bottom: 140px
+	p
+		display: block
+		font-size: 16px
+		line-height: 18px
+		margin-bottom: 30px
