--- a/assets/sass/component/_button.sass
+++ b/assets/sass/component/_button.sass
@@ -218,6 +218,7 @@ i.checkbox-icon
   height: 13px
   border: 1px solid #d8d8d8
   transition: all  1s ease 
+  vertical-align: middle
 
   &:before
     content: ""
@@ -227,4 +228,9 @@ i.checkbox-icon
     width: 100%
     height: 100%
     background-color: #000
-    // background-image: url("../images/webs/icon_check.svg")
+    background: url("~static/images/webs/check_marker.svg") no-repeat center
+    background-size: contain
+    opacity: 0
+    transform: scale(0)
+    transition: all .5s ease
+    
