chore: update path

--- a/assets/sass/basic/index.sass
+++ b/assets/sass/basic/index.sass
@@ -1,6 +1,6 @@
-@import 'basic/color'
-@import 'basic/mixins'
-@import 'basic/reset'
-@import 'basic/responsive'
-@import 'basic/typography'
-@import "basic/base"
+@import 'color'
+@import 'mixins'
+@import 'reset'
+@import 'responsive'
+@import 'typography'
+@import "base"
