--- a/assets/sass/component/index.sass
+++ b/assets/sass/component/index.sass
@@ -1,37 +1,37 @@
-@import 'component/activity'
-@import 'component/animation'
-@import 'component/award-parrent'
-@import 'component/benefit'
-@import 'component/blog-sidebar'
-@import 'component/box'
-@import 'component/breadcrumb'
-@import 'component/button'
-@import 'component/card-border'
-@import 'component/cart-product'
-@import 'component/ckeditor'
-@import 'component/counter-input'
-@import 'component/delivery'
-@import 'component/department-link'
-@import "component/footer-quicklink"
-@import "component/hover-li"
-@import 'component/input-form'
-@import 'component/input-radio-display'
-@import 'component/list-language'
-@import 'component/love-active'
-@import 'component/mini-tab-title'
-@import 'component/mobile-menu'
-@import 'component/normal-a'
-@import 'component/order-card'
-@import 'component/order-step'
-@import 'component/order-tracking'
-@import 'component/preload'
-@import 'component/price-rate'
-@import 'component/product'
-@import 'component/quickview'
-@import 'component/reward-record-table'
-@import 'component/share_button'
-@import 'component/shop-sidebar'
-@import 'component/tab'
-@import 'component/typography'
-@import "component/_v-select-button"
-@import 'component/wishmoal-row'
+@import 'activity'
+@import 'animation'
+@import 'award-parrent'
+@import 'benefit'
+@import 'blog-sidebar'
+@import 'box'
+@import 'breadcrumb'
+@import 'button'
+@import 'card-border'
+@import 'cart-product'
+@import 'ckeditor'
+@import 'counter-input'
+@import 'delivery'
+@import 'department-link'
+@import "footer-quicklink"
+@import "hover-li"
+@import 'input-form'
+@import 'input-radio-display'
+@import 'list-language'
+@import 'love-active'
+@import 'mini-tab-title'
+@import 'mobile-menu'
+@import 'normal-a'
+@import 'order-card'
+@import 'order-step'
+@import 'order-tracking'
+@import 'preload'
+@import 'price-rate'
+@import 'product'
+@import 'quickview'
+@import 'reward-record-table'
+@import 'share_button'
+@import 'shop-sidebar'
+@import 'tab'
+@import 'typography'
+@import "_v-select-button"
+@import 'wishmoal-row'
