--- a/assets/sass/layout/index.sass
+++ b/assets/sass/layout/index.sass
@@ -1,30 +1,30 @@
-@import 'layout/404-error'
-@import 'layout/search'
-@import 'layout/about-us'
-@import 'layout/account'
-@import 'layout/banner'
-@import 'layout/blog-layout'
-@import 'layout/coming-soon'
-@import 'layout/contact-us'
-@import 'layout/deal-of-week'
-@import 'layout/delivery-process'
-@import 'layout/faq'
-@import 'layout/feature-products'
-@import 'layout/footer'
-@import 'layout/from-blog'
-@import 'layout/header'
-@import 'layout/introduce'
-@import 'layout/items-category'
-@import 'layout/partner'
-@import 'layout/product-block'
-@import 'layout/product-pretty'
-@import 'layout/quick-banner'
-@import 'layout/sale-product'
-@import 'layout/shop-cart'
-@import 'layout/shop-checkout'
-@import 'layout/shop-compare'
-@import 'layout/shop-layout'
-@import 'layout/slider'
+@import '404-error'
+@import 'search'
+@import 'about-us'
+@import 'account'
+@import 'banner'
+@import 'blog-layout'
+@import 'coming-soon'
+@import 'contact-us'
+@import 'deal-of-week'
+@import 'delivery-process'
+@import 'faq'
+@import 'feature-products'
+@import 'footer'
+@import 'from-blog'
+@import 'header'
+@import 'introduce'
+@import 'items-category'
+@import 'partner'
+@import 'product-block'
+@import 'product-pretty'
+@import 'quick-banner'
+@import 'sale-product'
+@import 'shop-cart'
+@import 'shop-checkout'
+@import 'shop-compare'
+@import 'shop-layout'
+@import 'slider'
 
 @media (max-width: 576px)
   .no-gutters-sm
