--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -77,10 +77,19 @@
         justify-content: center
 
         +mobile
-          height: 500px
+          height: 800px
+          height: auto
+          display: block
+
+          img
+            width: 100% !important
+            height: auto 
+
+          img.zoomImg
+            display: none
 
         +tablet
-          height: 550px
+          height: 800px
 
         +desktop
           height: 800px
