--- a/assets/sass/component/_counter-input.sass
+++ b/assets/sass/component/_counter-input.sass
@@ -1,14 +1,20 @@
 .counter-number-input
-  display: block
+  display: block !important
   font-size: 0
   max-width: 100%
-  overflow: hidden
   position: relative
+  max-width: 140px
+  min-width: 140px
+  box-sizing: border-box
+  overflow: hidden
+
+  &.big
+    max-width: 180px
 
   &__button
     background-color: #fff
     border: 0
-    border-radius: 0.25rem
+    // border-radius: 0.25rem
     bottom: 1px
     position: absolute
     top: 2px
@@ -72,7 +78,7 @@
 
 
   &__input
-    -moz-appearance: textfield
+    -moz-appearance: textfield !important
     background-color: #fff
     border: 1px solid #ddd
     border-radius: 0.25rem
@@ -80,11 +86,12 @@
     font-size: 1rem
     line-height: 1.5
     max-width: 100%
-    min-height: 1.5rem
+    min-height: 2.375rem
     min-width: 3rem
-    padding: 0.4375rem 0.875rem
+    // padding: 0.4375rem 0.875rem
     transition: border-color 0.15s
-    width: 135px
+    width: 100%
+
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button
@@ -106,7 +113,7 @@
 
     & > input
       display: inline-block
-      width: 12.5rem
+      // min-width: 15.625rem
 
 
   &--center
