--- a/assets/sass/component/_v-select-button.sass
+++ b/assets/sass/component/_v-select-button.sass
@@ -6,6 +6,7 @@
   box-sizing: border-box
   padding: .25rem .75rem
   margin-right: 8px
+  margin-bottom: 8px
   color: rgba(0, 0, 0, .8)
   text-align: left
   border-radius: 2px
