fix: 語系切換功能
fix #35

--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -900,6 +900,6 @@ header .header-block .header-right .language .selected-language .list-language l
   	  	background-position: center center
 
 i.arrow_carrot-down
-    color: white !important
+    color: black !important
 .sub-menu.d-flex .nav-column li a
     line-height: 1.5!important
