fix: 輸入框修改
fix #117

--- a/assets/sass/basic/_color.sass
+++ b/assets/sass/basic/_color.sass
@@ -9,7 +9,7 @@ $black: #000
 $regular: #636363
 $disable: #b2b2b2
 $disable-2: #d1d1d1
-$line: #ebebeb
+$line: #fff
 $line-2: #f5f5f5
 $trans: transparent
 $border: 1px solid #f5f5f5
