fix: in placeholder and not required css

--- a/assets/sass/component/_input-form.sass
+++ b/assets/sass/component/_input-form.sass
@@ -86,8 +86,11 @@
                 @extend %label-movement
         
         
-        &:valid ~ label
+        &:required:valid ~ label
             @extend %label-movement
+        &:not(:required):not(:placeholder-shown) ~ label
+            @extend %label-movement
+
     
 
     input
