--- a/assets/sass/component/_input-form.sass
+++ b/assets/sass/component/_input-form.sass
@@ -1,23 +1,29 @@
-.no-round-input
+.no-round-input 
 	@include input(0,$line,0 20px,50px)
-.no-round-input::placeholder
+
+.no-round-input::placeholder,
+.no-round-input:-moz-placeholder,
+.no-round-input::-moz-placeholder
     font-size: 18px
-    line-height: 1.3
-.no-round-input-bg
+    line-height: 50px
+
+.no-round-input-bg 
     @include input(0,$line,0 20px,50px)
-    background-color: $white
+    border: 1px solid $line
+    // background-color: $line
 
-.textarea-form-bg
+.textarea-form-bg 
     @include input(0,$line,20px 20px,auto)
-    background-color: $white
+    border: 1px solid $line
+    // background-color: $line
 
-.round-input
+.round-input 
 	@include input(999px,$line,0 25px,50px)
 
-.no-border
+.no-border 
 	border: 0!important
 
-.select-form
+.select-form 
     appearance: none
     -webkit-appearance: none
     -moz-appearance: none
@@ -26,73 +32,80 @@
     -moz-border-radius: 2px
     -ms-border-radius: 2px
     -o-border-radius: 2px
-    border: 1px solid $line
+    // border: 1px solid $line
     padding: 10px 30px 10px 20px
-    background:
+    background: 
     	image: url(../images/arrow_carrot-down.svg)
     	repeat: no-repeat
     	size: 15px
     	position: 90% center
-    background-color: #f8f8f8
-
-    &:focus
+    background-color: $subcolor-7
+    
+    &:focus 
         outline: 0
         box-shadow: 0
         border-color: $primary-color
+    
 
-
-.textarea-form
+.textarea-form 
     @include textarea(0,$line,20px 20px,auto)
     resize: none
 
 
+
+
+
+
 .styled-input
-  width: 100%
-  position: relative
-
-  label
-    padding: 17px 20px
-    position: absolute
-    top: 0
-    left: 0
-    transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1)
-    pointer-events: none
-    color: #212529
-    font-size: 16px
-    margin-bottom: 0 !important
-
-  input, textarea
-    padding: 0 20px
-
     width: 100%
-    margin-bottom: 0 !important
-    font-size: 16px
-    border: 1px solid #d8d8d8
+    position: relative
 
-    &:focus
-      outline: 0
-      border-color: #88c74a
-      ~ label
-        @extend %label-movement
+    label
+        padding: 17px 20px
+        position: absolute
+        top: 0    
+        left: 0
+        transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1)
+        pointer-events: none
+        color: #212529
+        font-size: 16px
+        margin-bottom: 0 !important
 
+    input, textarea
+        padding: 0 20px
+        
+        width: 100%
+        margin-bottom: 0 !important
+        font-size: 16px
+        border: 1px solid #d8d8d8
 
-    &:valid ~ label
-      @extend %label-movement
+        &:focus
+            outline: 0
+            border-color: #0b1d37
+            ~ label
+                @extend %label-movement
+        
+        
+        &:required:valid ~ label
+            @extend %label-movement
+        &:not(:required):not(:placeholder-shown) ~ label
+            @extend %label-movement
 
+    
 
-  input
-    height: 50px
-    padding-top: 12px
+    input
+        height: 50px
+        padding-top: 12px
 
-  textarea
-    height: 100px
-    padding-top: 20px
+    textarea
+        height: 100px
+        padding-top: 20px
 
 
 
 %label-movement
-  font-size: 12px
-  line-height: 1
-  color: #b2b2b2
-  top: -11px
-  transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1)
+    font-size: 12px
+    line-height: 1
+    color: #b2b2b2
+    top: -11px
+    transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1)
