fix: 訂單詳情展開後應該為「-」號
fix #162

--- a/assets/sass/component/_button.sass
+++ b/assets/sass/component/_button.sass
@@ -72,6 +72,20 @@ select.custom-select
   top: 50%
   left: 50%
   transform: translateX(-50%) translateY(-50%)
+.decrease-icon
+  background-image: url("../images/webs/minus.svg")
+  width: 18px
+  height: 18px
+  background-repeat: no-repeat
+  background-position: center
+  background-size: cover
+  cursor: pointer
+  display: flex
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translateX(-50%) translateY(-50%)
+
 .edit-icon
   background-image: url("../images/webs/edit_small.svg")
   width: 18px
@@ -174,5 +188,7 @@ button:hover .edit-icon
   background-image: url("../images/webs/edit_small_w.svg")
 button:hover .increase-icon
   background-image: url("../images/webs/plus_w.svg")
+button:hover .decrease-icon
+  background-image: url("../images/webs/minus_w.svg")
 button:focus
   outline: 0
