fix: 中/EN改成地球小 icon＋中 / English
fix #141

--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -759,6 +759,16 @@ header.coffee-2
 	&:hover
 		background-image: url("../images/webs/heart.svg")
 
+
+
+.icon-globle
+	display: inline-block
+	transform: translateY(2px)
+	+icon-bg('../images/icon_language-02.svg', 15px)
+
+	&:hover
+		background-image: url("../images/icon_language-02.svg")
+
 .shopping-cart-icon
 	transform: translateY(4px)
 
@@ -848,7 +858,7 @@ i.arrow_carrot-down
 		img
 			width: 120px
 
-	+small-desktop 
+	+small-desktop
 		height: 150px
 		border-top: none
 		img
@@ -872,11 +882,11 @@ header .navigation .navgition-menu ul .toggleable:last-child .sub-menu.shop
 		width: 1000px
 	+desktop
 		width: 800px
-	
+
 .social-link
 	align-items: center
 	justify-content: center
-	
+
 .social-link--item
 	padding: 0 10px
 	vertical-align: middle
