fix: 43 在 iphone SE 和 小米手機，排列方式選單會被擋住 看是否可以調整一下
total: 2.5hr

--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -558,7 +558,11 @@
           overflow-x: auto
 
           .product-filter
-            margin-right: 20px
+            // margin-right: 20px
+            .select-form
+              width: 100%
+              padding: 0 10px
+              padding-right: 30px
 
 
         .product-option
@@ -673,7 +677,7 @@
           overflow-x: auto
 
           .product-filter
-            margin-right: 20px
+            // margin-right: 20px
 
 
         .product-option
@@ -782,7 +786,7 @@
           overflow-x: auto
 
           .product-filter
-            margin-right: 20px
+            // margin-right: 20px
 
 
         .product-option
