--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -558,11 +558,7 @@
           overflow-x: auto
 
           .product-filter
-            // margin-right: 20px
-            .select-form
-              width: 100%
-              padding: 0 10px
-              padding-right: 30px
+            margin-right: 20px
 
 
         .product-option
@@ -677,7 +673,7 @@
           overflow-x: auto
 
           .product-filter
-            // margin-right: 20px
+            margin-right: 20px
 
 
         .product-option
@@ -786,7 +782,7 @@
           overflow-x: auto
 
           .product-filter
-            // margin-right: 20px
+            margin-right: 20px
 
 
         .product-option
