--- a/assets/sass/component/_preload.sass
+++ b/assets/sass/component/_preload.sass
@@ -10,26 +10,53 @@
 	align-items: center
 	justify-content: center
 	.preload-box
-		.line 
+		.line
 			margin: 0 5px
 			display: inline-block
 			width: 15px
 			height: 15px
 			border-radius: 15px
 			background-color: $primary-color
-			&:nth-last-child(1) 
-				animation: loadingC .6s .1s linear infinite
-			&:nth-last-child(2) 
-				animation: loadingC .6s .2s linear infinite
-			&:nth-last-child(3) 
-				animation: loadingC .6s .3s linear infinite
-		
-	
-    @keyframes loadingC 
-	    0 
-			transform: translate(0,0)
-		50% 
-			transform: translate(0,15px)
-		100% 
-			transform: translate(0,0)
+			animation-timing-function: cubic-bezier(0, 1, 1, 0)
+
+.preload-box div:nth-child(1)
+  left: 8px
+  animation: lds-ellipsis1 0.9s infinite
+
+.preload-box div:nth-child(2)
+  left: 8px
+  animation: lds-ellipsis2 0.9s infinite
+
+.preload-box div:nth-child(3)
+  left: 32px
+  animation: lds-ellipsis2 0.9s infinite
+
+.preload-box div:nth-child(4)
+  left: 56px
+  animation: lds-ellipsis3 0.9s infinite
+
+@keyframes lds-ellipsis1
+  0%
+    transform: scale(0)
+
+  100%
+    transform: scale(1)
+
+
+@keyframes lds-ellipsis3
+  0%
+    transform: scale(1)
+
+  100%
+    transform: scale(0)
+
+
+@keyframes lds-ellipsis2
+  0%
+    transform: translate(0, 0)
+
+  100%
+    transform: translate(24px, 0)
+
+
 	
