--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -83,7 +83,7 @@
 
           img
             width: 100% !important
-            height: auto 
+            height: auto
 
           img.zoomImg
             display: none
@@ -988,7 +988,6 @@ h3.terms-title
 
 
 .slide-img .slide-img_block img
-  width: 100%
   max-width: 100%
 
 .shop-detail .slide-img
@@ -1086,6 +1085,8 @@ h3.terms-title
   .flex-order--item.order-mob-2
     order: 2
 
+  .slide-img_block
+    max-width: 180px !important
 
 
 .shop-detail_info .slide-img_block
