--- a/assets/sass/layout/_slider.sass
+++ b/assets/sass/layout/_slider.sass
@@ -19,10 +19,9 @@
 			padding: 0
 
 			.img-banner
-				position: relative
 				width: 100%
-				padding-top: 36.9%
-				background-size: cover
+        height: 100%
+        text-align: center
 
 			img
 				min-width: 100%
